--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -20,6 +20,12 @@
 .bg-solid {
   background-color: var(--color-solid);
 }
+.bg-solid-1 {
+  background-color: var(--color-solid-1);
+}
+.bg-solid-2 {
+  background-color: var(--color-solid-2);
+}
 .bg-inverse {
   background-color: var(--color-inverse);
 }
