--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -4,6 +4,13 @@
 .truncate-2 {
   @include truncate(2);
 }
+
+.text-bold {
+  font-weight: 600;
+}
+.text-bolder {
+  font-weight: 800;
+}
 // Colors
 .text-primary-bright {
   color: $primaryBright !important;
