--- a/src/scss/components/_mini-map.scss
+++ b/src/scss/components/_mini-map.scss
@@ -61,7 +61,7 @@ body.scrolling {
 .mini-map {
   position: fixed;
   bottom: 70px;
-  left: 26px;
+  right: 26px;
   height: 100px;
   width: 100px;
   transition: all 0.2s ease-in-out;
