--- a/public/main.css
+++ b/public/main.css
@@ -5821,7 +5821,7 @@ body.scrolling .mini-map {
   .n-item.large {
     min-height: 56px; }
   .n-item.compact {
-    min-height: 30px; }
+    min-height: 35px; }
     .n-item.compact .n-text.md {
       font-size: 0.8rem;
       line-height: 1rem; }
@@ -5937,9 +5937,11 @@ body.scrolling .mini-map {
 
 .n-item-log.compact {
   margin: 10px 4px !important; }
-  .n-item-log.compact .trackers-list .main div,
-  .n-item-log.compact .trackers-list .main .left {
-    font-size: 0.9rem !important; }
+  .n-item-log.compact .trackers-list {
+    margin-top: 8px; }
+    .n-item-log.compact .trackers-list .main div,
+    .n-item-log.compact .trackers-list .main .left {
+      font-size: 0.9rem !important; }
   .n-item-log.compact .time-row {
     padding: 2px;
     display: flex;
