--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -27,6 +27,21 @@
 .bg-solid {
   background-color: var(--color-solid);
 }
+.fill-primary-bright {
+  fill: var(--color-primary-bright) !important;
+}
+.fill-green {
+  fill: var(--color-green) !important;
+}
+.fill-red {
+  fill: var(--color-red) !important;
+}
+.fill-inverse {
+  fill: var(--color-inverse) !important;
+}
+.fill-primary {
+  fill: var(--color-primary) !important;
+}
 .bg-solid-1 {
   background-color: var(--color-solid-1);
 }
@@ -66,6 +81,22 @@
 .font-140 {
   font-size: 1.4rem;
 }
+.fill-faded {
+  fill: var(--color-faded) !important;
+}
+.fill-faded-1 {
+  fill: var(--color-faded-1) !important;
+}
+.fill-white {
+  fill: #fff !important;
+}
+.fill-faded-2 {
+  fill: var(--color-faded-2) !important;
+}
+.fill-faded-3 {
+  fill: var(--color-faded-3) !important;
+}
+
 .text-faded {
   color: var(--color-faded) !important;
 }
