--- a/public/board-tabs.css
+++ b/public/board-tabs.css
@@ -6,7 +6,8 @@
   box-shadow: inset 3px 0px 4px rgba(0, 0, 0, 0);
   transition: all 0.2s ease-in-out; }
   .n-board-tabs:not([data-scroll="0"]) {
-    box-shadow: inset 2px 0px 1px var(--color-faded); }
+    box-shadow: inset 2px 0px 1px var(--color-faded) !important;
+    z-index: 10; }
   .n-board-tabs .zmdi {
     color: var(--color-inverse-2);
     z-index: 10; }
