--- a/public/main.css
+++ b/public/main.css
@@ -5677,7 +5677,8 @@ body.scrolling .mini-map {
   box-shadow: var(--box-shadow-float) !important;
   height: 44px;
   overflow: hidden;
-  border: none; }
+  border: none;
+  display: none; }
   .leaflet-control-zoom a {
     float: none !important;
     height: 44px !important;
@@ -5689,9 +5690,9 @@ body.scrolling .mini-map {
     background-color: rgba(255, 255, 255, 0.7); }
     .leaflet-control-zoom a:first-child {
       border-right: solid 1px var(--color-faded-2) !important; }
-  @media (max-width: 349.98px) {
-    .leaflet-control-zoom {
-      display: none; } }
+
+.leaflet-container {
+  background-color: var(--color-solid) !important; }
 
 .leaflet-control-attribution {
   background: transparent !important;
@@ -5826,19 +5827,18 @@ body.scrolling .mini-map {
   font-size: 1rem;
   flex-shrink: 0;
   background-color: var(--color-solid); }
+  .n-item.solo, .n-item[solo] {
+    width: calc(100% - 16pt);
+    margin: 8pt;
+    border-radius: 8pt; }
   .n-item select,
   .n-item input {
     margin: 8px 0; }
   .n-item label {
     margin-bottom: 0; }
   .n-item .trackers-list .n-item {
-    margin-left: -16px;
-    margin-right: -16px;
-    padding-left: 16px !important;
-    padding-right: 16px !important;
-    border-bottom-color: rgba(0, 0, 0, 0.05) !important; }
-  .n-item .trackers-list .n-item:last-child {
-    border-bottom: none !important; }
+    padding-left: 16pt !important;
+    padding-right: 16pt !important; }
   .n-item.item-divider {
     background-color: var(--color-bg); }
   .n-item.disabled {
@@ -5965,28 +5965,6 @@ body.scrolling .mini-map {
 
 .bg-light {
   background-color: var(--color-solid) !important; }
-
-.n-item-log.compact {
-  margin: 10px 4px !important; }
-  .n-item-log.compact .trackers-list {
-    margin-top: 8px; }
-    .n-item-log.compact .trackers-list .main div,
-    .n-item-log.compact .trackers-list .main .left {
-      font-size: 0.9rem !important; }
-  .n-item-log.compact .time-row {
-    padding: 2px;
-    display: flex;
-    align-items: center;
-    height: 32px;
-    margin-bottom: -2px; }
-    .n-item-log.compact .time-row .time {
-      font-size: 0.8rem; }
-  .n-item-log.compact .n-note-textualized {
-    padding-top: 4px;
-    font-size: 0.9rem !important;
-    line-height: 1.1rem !important; }
-  .n-item-log.compact .n-item {
-    min-height: 30px; }
 
 .n-modal-frame.tracker-input .n-modal-body {
   border-radius: 0;
@@ -6369,18 +6347,27 @@ aside.n-panel {
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr;
   height: 100%;
-  width: 100%;
-  min-height: 50px; }
+  width: calc(100% - 16pt);
+  min-height: 50px;
+  margin-left: 8pt;
+  margin-right: 8pt; }
+  @media (min-width: 600px) {
+    .n-toolbar-grid {
+      margin-left: auto;
+      margin-right: auto; } }
 
 .n-toolbar-grid.lg {
   min-height: 50px; }
 
 .n-toolbar-grid .left {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   grid-area: 1 / 1 / 2 / 2;
   justify-content: center; }
+  .n-toolbar-grid .left .btn-clear,
+  .n-toolbar-grid .left .tap-icon {
+    padding-left: 0; }
 
 .n-toolbar-grid .main {
   align-items: center;
@@ -6399,11 +6386,40 @@ aside.n-panel {
   text-align: center; }
 
 .n-toolbar-grid .right {
-  align-items: stretch;
+  align-items: flex-end;
   display: flex;
   flex-direction: column;
   grid-area: 1 / 3 / 2 / 4;
   justify-content: center; }
+  .n-toolbar-grid .right .btn-clear,
+  .n-toolbar-grid .right .tap-icon {
+    padding-right: 0; }
+
+.n-item-log {
+  width: calc(100% - 16pt);
+  margin: 16pt 8pt;
+  padding: 0px;
+  border-radius: 16pt;
+  overflow: hidden;
+  box-shadow: var(--box-shadow); }
+  .n-item-log .time-row {
+    padding: 8pt 16pt; }
+    .n-item-log .time-row .date-ago {
+      font-size: 10pt;
+      opacity: 0.5; }
+  .n-item-log .n-note-textualized {
+    padding: 16pt !important;
+    font-size: 1.1rem;
+    line-height: 126%;
+    border-top: solid 1px rgba(0, 0, 0, 0.1); }
+    .n-item-log .n-note-textualized.long-note {
+      font-size: 0.97rem; }
+  .n-item-log .trackers-list {
+    border-top: solid 1px rgba(0, 0, 0, 0.1); }
+    .n-item-log .trackers-list .n-item {
+      padding: 0 16px; }
+    .n-item-log .trackers-list .n-item:last-child {
+      border-bottom: none !important; }
 
 /**
 THIS STUFF BELOW SHOULD NOT BE HERE - IT SHOULD BE ORGANIZED 
@@ -6600,6 +6616,7 @@ TODO: Organize main into components or containers.
   color: var(--color-inverse-1); }
 
 .tap-icon {
+  transition: all 0.2s ease-in-out;
   z-index: 10;
   position: relative;
   font-size: 1.6rem !important;
@@ -6607,6 +6624,11 @@ TODO: Organize main into components or containers.
   fill: var(--color-primary-bright) !important; }
   .tap-icon.sm {
     font-size: 1.5rem !important; }
+  .tap-icon svg {
+    height: 32px;
+    width: 32px; }
+  .tap-icon:focus, .tap-icon:active {
+    transform: scale(0.9) !important; }
 
 .tap-text {
   font-weight: 500 !important;
@@ -6660,13 +6682,16 @@ TODO: Organize main into components or containers.
 
 .clickable,
 [clickable] {
+  transition: all 0.2s ease-in-out;
   position: relative;
   cursor: pointer;
   touch-action: manipulation; }
 
-.clickable:hover,
-.clickable:focus {
-  background-color: rgba(49, 158, 215, 0.09); }
+.clickable:focus,
+.clickable:active {
+  outline: none;
+  box-shadow: inset 0px 0px 40px rgba(49, 158, 215, 0.2);
+  transform: scale(0.99); }
 
 .btn,
 a,
