enhance: style updates

--- a/src/scss/components/toolbar-grid.scss
+++ b/src/scss/components/toolbar-grid.scss
@@ -31,7 +31,7 @@
   justify-content: center;
   .btn-clear,
   .tap-icon {
-    padding-left: 0;
+    // padding-left: 0;
   }
 }
 .n-toolbar-grid .main {
@@ -58,6 +58,6 @@
   justify-content: center;
   .btn-clear,
   .tap-icon {
-    padding-right: 0;
+    // padding-right: 0;
   }
 }
