--- a/public/main.css
+++ b/public/main.css
@@ -6371,9 +6371,6 @@ aside.n-panel {
   flex-direction: column;
   grid-area: 1 / 1 / 2 / 2;
   justify-content: center; }
-  .n-toolbar-grid .left .btn-clear,
-  .n-toolbar-grid .left .tap-icon {
-    padding-left: 0; }
 
 .n-toolbar-grid .main {
   align-items: center;
@@ -6397,9 +6394,6 @@ aside.n-panel {
   flex-direction: column;
   grid-area: 1 / 3 / 2 / 4;
   justify-content: center; }
-  .n-toolbar-grid .right .btn-clear,
-  .n-toolbar-grid .right .tap-icon {
-    padding-right: 0; }
 
 .n-item-log {
   width: calc(100% - 16pt);
@@ -6692,12 +6686,30 @@ TODO: Organize main into components or containers.
   position: relative;
   cursor: pointer;
   touch-action: manipulation; }
+  .clickable:after,
+  [clickable]:after {
+    transition: all 0.2s ease-in-out;
+    content: "";
+    pointer-events: none;
+    background-color: rgba(49, 158, 215, 0);
+    transform: scale(0.1);
+    border-radius: 8pt; }
 
 .clickable:focus,
 .clickable:active {
   outline: none;
-  box-shadow: inset 0px 0px 40px rgba(49, 158, 215, 0.2);
+  overflow: hidden;
   transform: scale(0.99); }
+  .clickable:focus:after,
+  .clickable:active:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    transform: scale(1);
+    background-color: rgba(49, 158, 215, 0.2); }
 
 .btn,
 a,
