fix: Note positioning in Share

--- a/src/scss/components/_share-image.scss
+++ b/src/scss/components/_share-image.scss
@@ -117,6 +117,7 @@
     padding: 0px 16px;
     word-spacing: 0.09rem;
     align-items: center;
+    margin-top: -40px;
     .n-note-textualized {
       flex-grow: 1;
       text-align: center;
