--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -34,6 +34,7 @@ body {
   --color-inverse-3: #999;
   --color-solid: #fff;
   --color-white: #fff;
+  --color-solid-half: #f8f8f8;
   --color-solid-1: #eee;
   --color-solid-2: rgb(223, 223, 223);
   --color-solid-3: #666;
@@ -99,6 +100,7 @@ body.test {
   --color-darkest: #000;
   --color-bg: rgb(5, 5, 5);
   --color-solid: rgb(25, 25, 25);
+  --color-solid-half: rgb(30, 30, 30);
   --color-solid-1: rgb(35, 35, 35);
   --color-solid-2: rgb(45, 45, 45);
   --color-solid-3: rgb(55, 55, 55);
