--- a/src/scss/base/_animate.scss
+++ b/src/scss/base/_animate.scss
@@ -36,3 +36,65 @@
     }
   }
 }
+
+@keyframes keyframes1 {
+  0% {
+    transform: rotate(-1.2deg);
+    animation-timing-function: ease-in-out;
+  }
+  50% {
+    transform: rotate(1.7deg);
+    animation-timing-function: ease-in-out;
+  }
+}
+
+@keyframes keyframes2 {
+  0% {
+    transform: rotate(1.2deg);
+    animation-timing-function: ease-in-out;
+  }
+  50% {
+    transform: rotate(-1.7deg);
+    animation-timing-function: ease-in-out;
+  }
+}
+
+@keyframes shadow-pulse {
+  0% {
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
+  }
+}
+
+.wiggle {
+  animation: keyframes2 infinite 0.6s ease-out;
+  transform-origin: 50% 10%;
+}
+.wiggle-other {
+  animation: keyframes2 infinite 0.6s ease-in;
+  transform-origin: 50% 10%;
+}
+
+.pulse {
+  transform: scale(1);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    // transform: scale3d(0.95);
+    box-shadow: 0 0 0 0 rgba($green, 0.3);
+  }
+
+  70% {
+    // transform: scale3d(1);
+    box-shadow: 0 0 0 10px rgba($green, 0);
+  }
+
+  100% {
+    // transform: scale3d(0.95);
+    box-shadow: 0 0 0 0 rgba($green, 0);
+  }
+}
