--- a/src/scss/base/_flex.scss
+++ b/src/scss/base/_flex.scss
@@ -1,16 +1,25 @@
 .justify-content-stretch {
-	justify-content: stretch;
+  justify-content: stretch;
 }
 
 .flex-grow {
-	flex-grow: 1;
+  flex-grow: 1;
 }
 .flex-shrink {
-	flex-shrink: 1;
+  flex-shrink: 1;
 }
 .flex-grow-off {
-	flex-grow: 0;
+  flex-grow: 0;
 }
 .flex-shrink-off {
-	flex-shrink: 0;
+  flex-shrink: 0;
+}
+
+.toolbar-buttons {
+  display: flex;
+  flex-direction: row !important;
+  align-items: center !important;
+  .btn {
+    padding: 0 4px;
+  }
 }
