--- a/public/main.css
+++ b/public/main.css
@@ -4868,6 +4868,23 @@ button:focus {
 .btn:focus, .btn.focus {
   box-shadow: inherit; }
 
+.btn-badge {
+  font-size: 0.8rem;
+  padding: 3pt 6pt 3pt 6pt;
+  background-color: var(--color-solid);
+  color: var(--color-inverse-1);
+  box-shadow: var(--box-shadow-tight);
+  margin: 4pt 2pt; }
+  .btn-badge .count {
+    background-color: var(--color-solid-1);
+    font-size: 12px;
+    line-height: 20px;
+    padding: 0 4px;
+    min-width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    margin-left: 4px; }
+
 .btn-group .btn {
   font-size: 0.75rem !important; }
   .btn-group .btn:active {
@@ -5564,6 +5581,8 @@ select {
   align-items: center !important; }
   .toolbar-buttons .btn {
     padding: 0 4px; }
+  .toolbar-buttons.align-right {
+    justify-content: flex-end; }
 
 .animate {
   transition: all 0.2s ease-in-out; }
@@ -6564,6 +6583,34 @@ TODO: Organize main into components or containers.
 
 .text-underline {
   text-decoration: underline !important; }
+
+.position-relative {
+  position: relative; }
+
+.mock-card-animation {
+  z-index: 3000;
+  background-color: var(--color-solid);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 1.2rem;
+  box-shadow: var(--box-shadow-float); }
+
+.mock-header {
+  height: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background-color: var(--color-solid);
+  box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.3);
+  margin-top: 8pt;
+  margin-bottom: -16pt;
+  pointer-events: none; }
+  .mock-header:first-child {
+    display: none; }
+  .mock-header span {
+    display: none; }
 
 #photo-holder {
   position: fixed;
