--- a/public/main.css
+++ b/public/main.css
@@ -6584,6 +6584,17 @@ TODO: Organize main into components or containers.
 .text-underline {
   text-decoration: underline !important; }
 
+.autocomplete-results.scroller {
+  max-height: 48px;
+  overflow: scroll; }
+  .autocomplete-results.scroller .tracker-list {
+    margin-top: 0px;
+    margin-bottom: 2px;
+    max-height: 40px;
+    display: flex;
+    flex-wrap: nowrap !important;
+    width: fit-content; }
+
 .position-relative {
   position: relative; }
 
