--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,6 +57,19 @@ TODO: Organize main into components or containers.
   text-decoration: underline !important;
 }
 
+.autocomplete-results.scroller {
+  max-height: 48px;
+  overflow: scroll;
+  .tracker-list {
+    margin-top: 0px;
+    margin-bottom: 2px;
+    max-height: 40px;
+    display: flex;
+    flex-wrap: nowrap !important;
+    width: fit-content;
+  }
+}
+
 .position-relative {
   position: relative;
 }
