--- a/public/grid.css
+++ b/public/grid.css
@@ -8,3 +8,14 @@
   padding: 10px 0;
   align-items: flex-start;
   justify-content: space-evenly; }
+
+.n-grid.framed {
+  background-color: var(--color-solid-2);
+  width: 100%;
+  border-radius: 8pt;
+  padding: 8pt;
+  position: relative; }
+  .n-grid.framed .btn-close {
+    left: auto;
+    right: 10px;
+    top: 10px; }
