--- a/public/grid.css
+++ b/public/grid.css
@@ -11,10 +11,11 @@
 
 .n-grid.framed {
   background-color: var(--color-solid-2);
-  width: 100%;
+  width: calc(100% - 16pt);
   border-radius: 8pt;
   padding: 8pt;
-  position: relative; }
+  position: relative;
+  margin: 8pt; }
   .n-grid.framed .btn-close {
     left: auto;
     right: 10px;
