--- a/public/main.css
+++ b/public/main.css
@@ -6522,7 +6522,7 @@ aside.n-panel {
   grid-row-gap: 0px;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 1fr;
-  height: 100%;
+  height: 50px;
   width: calc(100% - 16pt);
   min-height: 50px;
   margin-left: 8pt;
@@ -6534,6 +6534,11 @@ aside.n-panel {
 
 .n-toolbar-grid.lg {
   min-height: 50px; }
+
+.n-toolbar-grid.sm {
+  min-height: 30px;
+  height: 30px;
+  font-size: 0.9rem; }
 
 .n-toolbar-grid .left {
   align-items: flex-start;
@@ -6547,7 +6552,8 @@ aside.n-panel {
   display: flex;
   flex-direction: column;
   grid-area: 1 / 2 / 2 / 3;
-  justify-content: center; }
+  justify-content: center;
+  font-weight: 700; }
 
 .n-toolbar-grid .main h1,
 .n-toolbar-grid .main .title {
